--- a/docs/beautiful.css
+++ b/docs/beautiful.css
@@ -1,8 +1,6 @@
 :root {
   --border-color: #cacaca;
   --background-color: #ffffff;
-
-  --background-box-title: #f7f7f7;
 }
 
 html, body {
@@ -184,19 +182,17 @@ cursor: pointer;
   -webkit-box-shadow: 0 2px 15px 2px var(--border-color);
   box-shadow: 0 2px 15px 2px var(--border-color);
   padding: 0px;
-  width: 200px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 
 .drawflow .drawflow-node.selected  {
   background: white;
-  border: 1px solid #4ea9ff;
-  -webkit-box-shadow: 0 2px 20px 2px #4ea9ff;
-  box-shadow: 0 2px 20px 2px #4ea9ff;
+  border: 1px solid #2c3e50;
 }
 
 .drawflow .drawflow-node.selected .title-box {
-  color: #22598c;
-  /*border-bottom: 1px solid #4ea9ff;*/
 }
 
 .drawflow .connection .main-path {
@@ -211,7 +207,7 @@ cursor: pointer;
 }
 
 .drawflow .drawflow-node .input:hover, .drawflow .drawflow-node .output:hover {
-  background: #4ea9ff;
+  background: #2c3e50;
 }
 
 .drawflow .drawflow-node .output {
@@ -232,18 +228,16 @@ cursor: pointer;
 }
 
 .drawflow-delete {
-  border: 2px solid #4ea9ff;
+  border: 2px solid #2c3e50;
   background: white;
-  color: #4ea9ff;
-  -webkit-box-shadow: 0 2px 20px 2px #4ea9ff;
-  box-shadow: 0 2px 20px 2px #4ea9ff;
+  color: #2c3e50;
+  -webkit-box-shadow: 0 2px 10px 1px #2c3e50;
+  box-shadow: 0 2px 10px 1px #2c3e50;
 }
 
 .drawflow-node .title-box {
   height: 50px;
   line-height: 50px;
-  background: var(--background-box-title);
-  border-bottom: 1px solid #e9e9e9;
   border-radius: 4px 4px 0px 0px;
   padding-left: 10px;
 }
@@ -340,4 +334,21 @@ cursor: pointer;
   .modal-content {
     width: 80%;
   }
+}
+
+.node-box {
+  display: flex;
+  background: green;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: 3rem;
+}
+
+div.drawflow-node.node-input {
+  color: #2980b9;
+}
+
+div.drawflow-node.node-middle {
+  color: #d35400;
 }
